--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
-p{
+div p{
   color: red;
+}
+
+h1 ~ h2{
+  color:blue;
+}
+
+p::before{
+  content:'<before>';
+}
+p::after{
+  content:'<after>';
+}
+
+a:link{
+  color:orange;
+}
+a:visited{
+  color:green;
+}
+
+P:hover{
+  color:red;
+}
+button:active{
+  color:red;
 }
